Fix the managed configurations build https://bugs.webkit.org/show_bug.cgi?id=184253 -and corresponding- rdar://problem/39078586

Reviewed by Dan Bernstein.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView canPerformActionForWebView:withSender:]):
(-[WKContentView _defineForWebView:]):



Canonical link: https://commits.webkit.org/199814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230204 268f45cc-cd09-0410-ab3c-d52691b4dbfc